--- a/doc/report.tex
+++ b/doc/report.tex
@@ -1,10 +1,3 @@
-% TODO list:
-% - Include thanks? anyone else?
-% - How will code be included, snippets or on disk??
-% - Proofs/detailed arguments for correctness of algos.
-% - Include project managementy bits
-% - Practical considerations, lines of code, sage vs magma python etc.
-
 % Structure:
 % - Introduction
 % - Background
@@ -19,7 +12,7 @@
 
 \documentclass[12pt,a4paper,abstracton,bibtotoc]{scrreprt}
 
-\author{Alex J. Best \\ Supervised by Dr. Lassina Demb\'el\'e}
+\author{Alex J. Best \\ {\large Supervised by Dr. Lassina Demb\'el\'e}}
 \date{2014}
 \title{Finding orders with prescribed index in number fields}
 
@@ -80,11 +73,10 @@ breakatwhitespace=false,    % sets if automatic breaks should only happen at whi
 \newpage\null\thispagestyle{empty}\newpage
 
 \begin{abstract}
-%TODO insert very small backstory, orders are objects in ant here ..
 Orders of number fields are common objects of study in algebraic number theory.
 Here we develop methods to obtain all orders with a specified index inside another given one.
-The performance, both theoretically and in implementations of these methods is discussed.
-We also apply these techniques to problems relating to elliptic curves over the rational numbers.
+The performance and coverage of these methods is discussed.
+We also apply these techniques to a problem relating to elliptic curves over the rational numbers.
 
 \smallskip
 \noindent \textbf{Keywords.} Number theory, algebraic number theory, elliptic curves, number fields, algorithms.
@@ -109,9 +101,9 @@ We finish up the background material in section~\ref{sec:ell} with an introducti
 Chapter~\ref{chap:prob} is where we consider our main problem and solutions to it.
 First we define the problems themselves and discuss the interest in studying them.
 After this in the rest of chapter~\ref{chap:prob} we detail the techniques used to solve the problems considered, starting with some special cases before moving onto more general results.
-Next we discuss the advantages of the algorithms developed and their practical timings.
+Next we discuss the advantages of the algorithms developed and ideas worth bearing in mind when implementing these algorithms.
 
-Finally in chapter~\ref{chap:ellapp} we move on to some interesting applications of these methods to finding elliptic curves with given properties.
+Finally in chapter~\ref{chap:ellapp} we move on to looking at an interesting application of these methods to finding elliptic curves with given properties.
 
 
 \chapter{Background material}
@@ -198,12 +190,19 @@ M_1 + M_2 = \{m_1 + m_2 \mid m_1\in M_1,\ m_2\in M_2\}.
 \]
 For example with this elementwise addition we have $M + M = M$ for any module $M$, whereas $M\oplus M$ is not isomorphic to $M$ unless $M$ is the trivial module (i.e. the module containing only a zero element and no others).
 
-The well known isomorphism theorems also hold for modules, we require only two.
+The well known isomorphism theorems also hold for modules, we will need all three.
 
 \begin{thm}[First isomorphism theorem for modules]
 Given a surjective module homomorphism $f\colon M \to N$ the kernel of $f$ is a submodule of $M$ and
 \[
 M/\ker(f) \cong N.
+\]
+\end{thm}
+
+\begin{thm}[Second isomorphism theorem for modules]
+Given a module $M$ with submodules $N_1$ and $N_2$ the sum $N_1 + N_2$ is a submodule of $M$ too, such that $N_1 \cap N_2$ is a submodule of $N_1$ and we have the isomorphism
+\[
+(N_1 + N_2)/N_2 \cong N_1/(N_1 \cap N_2).
 \]
 \end{thm}
 
@@ -389,9 +388,9 @@ y^2 + a_1xy + a_3y = x^3 + a_2x^2 + a_4x + a_6\text{ with }a_i\in K.
 \]
 To such a curve we assign several $b$ invariants based on the coefficients in the definition as follows
 \begin{align*}
-b_2 &= a_1^2 + 4a_2\\
-b_4 &= 2a_4 + a_1a_3\\
-b_6 &= a_3^2 + 4a_6\\
+b_2 &= a_1^2 + 4a_2,\\
+b_4 &= 2a_4 + a_1a_3,\\
+b_6 &= a_3^2 + 4a_6,\\
 b_8 &= a_1^2a_6 + 4a_2a_6 - a_1a_3a_4 + a_2a_3^2 -a_4^2.
 \end{align*}
 We then also require that the \emph{discriminant} $\Delta$ of $E$, given by
@@ -452,7 +451,7 @@ If we have two elliptic curves $E$ and $E'$ such that there exists homomorphisms
 A homomorphism $f$ with an inverse $g$ as in the definition above is called an \emph{isomorphism}.
 \end{defn}
 
-We can also consider homomorphisms from a given elliptic cuve to itself, these are known as \emph{endomorphisms} and they form a ring.
+We can also consider homomorphisms from a given elliptic curve to itself, these are known as \emph{endomorphisms} and they form a ring.
 
 \begin{defn}[Endomorphism ring]
 The \emph{endomorphism ring} of an elliptic curve is the set
@@ -824,8 +823,21 @@ A/(Z + I) \cong (A/I)/\phi(Z) \cong (1\cdot Z/J\oplus a\cdot Z/J)/(1\cdot Z/J) \
 \]
 so $g$ is correct.
 
-Now 
+Now let $I$ be an ideal of $A$ with $A/I \cong (Z/J)^2$, we want that $Z\cap I = J$.
+As $J = \Ann_Z(A/I)$ we have that $J\subset Z\cap I$.
+To see the reverse inclusion note that if $x\in Z\cap I$ then $xA\subset I$ and so $x\in \Ann_Z(A/I) = J$.
+Hence $Z\cap I = J$.
 
+To complete the proof we show that $f$ and $g$ are inverse maps.
+From earlier $A/(Z+ I)$ is isomorphic to $Z/J$, and then the above gives that we have a $Z$-linear isomorphisms
+\[
+A/(Z+I) \cong Z/J \cong Z/(Z\cap I) \cong (Z+I)/I.
+\]
+As $I$ acts in a trivial way on $A/(Z+I)$ and $(Z+I)/I$ the isomorphism above is $Z+ I$-linear.
+So for an ideal $I\in V$ we know $fg(I) = \Ann_{Z + I}(A/(Z+I)) = \Ann_{Z+I}((Z+I)/I) = I$.
+
+For the function $gf$ we have that for any $R\in W$ that $gf(R) = Z + f(R) \subset R$.
+As $Z$ is mapped by $\phi$ on to $R/f(R)$ surjectively we have that $R$ and $gf(R)$ are equal.
 \end{proof}
 
 The image of $f$ above is still well defined for non-cocyclic orders and this ideal is known as the \emph{conductor} of $\O$ in $R$.
@@ -1109,8 +1121,8 @@ add $M$ to the output.
 \end{algorithm}
 \end{alg}
 
-In fact using the lemma~\ref{lem:onebasis} we can improve this algorithm slightly.
-As we know that we can always include 1 in the basis of an order we can take a basis of the order we are given that contains 1.
+In fact, as we can always include 1 in the basis of an order.
+We can simplify our task slightly by taking a basis of the order we are given that contains 1.
 Then we can find change of basis matrices that fix this element, this provides a slight improvement over simply looking for all submodules.
 
 \begin{alg}~\\
@@ -1170,7 +1182,15 @@ Letting $a$ and $b$ be such that $am + bn = 1$ we can see that given $(x_1 + R_1
 (amx_2 + bnx_1 + R_1, amx_2 + bnx_1 + R_2) = (bnx_1 + R_1, amx_2 + R_2) = (x_1 + R_1,x_2 + R_2).
 \]
 Hence $p$ is surjective and has kernel $R_1 \cap R_2$ so $\O/(R_1\cap R_2) \cong \O/R_1 \times \O/R_2$ and so the index of $R_1 \cap R_2$ is correct.
-%TODO complete
+
+Given a suborder $R$ of $\O$ of index $mn$ with some $mn$ coprime we can use the bijection
+\[
+\{\text{submodules of } \O \text{ containing } R\} \leftrightarrow \{\text{submodules of }\O/R\}
+\]
+to obtain submodules $R_1$ and $R_2$ of $\O$ of index $m$ and $n$ as $\O/R$ is a finite abelian group.
+The intersection of these is therefore $R$ as they both contain $R$ their intersection is of index $mn$ in $\O$, so the map is surjective.
+
+To see injectivity note that in the above argument there will only be one submodule of $\O/R$ with index $m$ or $n$ and so we can only have one pair $(R_1,R_2)$ mapping to any given $R$.
 \end{proof}
 
 So given an index $I$ we can factor into prime powers to reduce the problem to several smaller ones, before recombining the resulting orders to obtain the full set.
@@ -1189,28 +1209,30 @@ Many of the algorithms given above are presented in a manner similar to the way 
 For example many algorithms rely on the large output of other algorithms run previously, so it can very memory intensive to keep this information on hand depending on the representation used for the data.
 So in some cases it is far better to run these methods alongside each other rather than waiting for the full output of one before running the other.
 
+We have implemented some of these methods in both the Sage and Magma computer algebra systems and used these implementations to work out real examples in reasonable time.
+
 \subsection{Parallelisation}
 Several stages of the algorithms for general orders can be naturally parallelised reducing the total time taken linearly with the number of threads used.
 For example once the set of potential conductors has been computed the orders to which they correspond can all be computed in parallel.
 Similarly the set of HNF matrices used can be computed in parallel and whether the modules they generate form rings or not can be checked simultaneously too.
 These will naturally only produce linear speed ups but nevertheless with larger examples they may be worth doing as they are simple to implement.
 
-\subsection{Timings}
-In order to get an idea for how these algorithms behave in practice we have timed the different methods on several large input sets.
-The algorithms were run on ...
-\begin{table}[h]
-\begin{tabular}{|p{14em}|l|l|l|}
-\hline
-Input & HNF algorithm & Conductor algorithm & Hybrid \\
-\hline
-Cubic fields of small discriminant ($< 100$) & 1.0s & 1.0s & 1.0s \\
-Cubic fields of small discriminant ($< 100$) & 1.0s & 1.0s & 1.0s \\
-Cubic fields of small discriminant ($< 100$) & 1.0s & 1.0s & 1.0s \\
-Cubic fields of small discriminant ($< 100$) & 1.0s & 1.0s & 1.0s \\
-\hline
-\end{tabular}
-\caption{\label{tab:timings} Timings for different algorithms for several input sets}
-\end{table}
+%\subsection{Timings}
+%In order to get an idea for how these algorithms behave in practice we have timed the different methods on several large input sets.
+%The algorithms were run on ...
+%\begin{table}[h]
+%\begin{tabular}{|p{14em}|l|l|l|}
+%\hline
+%Input & HNF algorithm & Conductor algorithm & Hybrid \\
+%\hline
+%Cubic fields of small discriminant ($< 100$) & 1.0s & 1.0s & 1.0s \\
+%Cubic fields of small discriminant ($< 100$) & 1.0s & 1.0s & 1.0s \\
+%Cubic fields of small discriminant ($< 100$) & 1.0s & 1.0s & 1.0s \\
+%Cubic fields of small discriminant ($< 100$) & 1.0s & 1.0s & 1.0s \\
+%\hline
+%\end{tabular}
+%\caption{\label{tab:timings} Timings for different algorithms for several input sets}
+%\end{table}
 
 
 \chapter{Finding elliptic curves}
@@ -1246,7 +1268,6 @@ E_0\cong E \colon y^2 = \frac{4Q(x) + P^2(x)}{4} = R(x).
 Assuming that the curve $E$ has no rational 2-torsion points we must have no rational solution to $R(x) = x^3 + a_2x^2 + a_4x + a_6$ and hence this polynomial is irreducible over $\QQ$ as it is of degree 3.
 However this polynomial is not guaranteed to have integer coefficients so we let $f = 4^3 R(x/4)$ which will have coefficients in the integers.
 We can then see that we have $\QQ[x]/(f)$ isomorphic to a subfield of the two torsion field $\QQ(E[2])$, we will let $K_E$ be $\QQ[x]/(f)$.
-%TODO checkeroo
 Letting $\alpha$ be the image of $x$ in the above quotient, we can see that $\ZZ[\alpha]$ is an order of $K_E$.
 The index of this order in $\ZZ_K$ is given, as mentioned in the section on monogenic orders, by the following expression
 \[
@@ -1277,8 +1298,6 @@ Once a generator for such a monogenic order has been found the polynomial $f$ is
 We will always have multiple ring generators if we have one as using some $\alpha + n$ with $n\in \ZZ$ instead of $\alpha$ will give the same ring, however we can see that although a change of this form will give an isomorphic curve.
 We say for the moment that ring generators differing only by an element of $\ZZ$ are equivalent.
 It is a result of Gy\H{o}ry that there are finitely many equivalence classes of ring generators and there are many subsequent results making this bound more explicit \cite{monogenic}.
-
-%TODO explain, monogenic so seems like diophantine is good, try to find large example where cocyclic works better than monogenic
 
 \begin{ex}
 The elliptic curve
@@ -1316,9 +1335,9 @@ Let us try and find an elliptic curve $E$ with discriminant in the set $\{\pm 11
 
 $K_E$ has discriminant $-44 = -4\cdot 11$ and so we can observe that for the discriminant we are looking for to be well defined we have to have a negative discriminant as otherwise we could not take the square root and obtain a natural number.
 Similarly we can tell that the discriminant must be an odd power of 11 rather than even, as otherwise the index required would not be natural again.
-So we need only check the discriminants in the set $\{-11,-11^3,-11^5,-11^7,-11^9,-11^11\}$.
+So we need only check the discriminants in the set $\{-11,-11^3,-11^5,-11^7,-11^9,-11^{11}\}$.
 
-We start with discriminant -11, giving index 8.
+We start with discriminant $-11$, giving index 8.
 Using the methods obtained above again we get the following orders
 \[
 \ZZ + \ZZ4\alpha + \ZZ2\alpha^2,\ \ZZ + \ZZ2\alpha + \ZZ4\alpha^2\text{ and } \ZZ + \ZZ(2\alpha + 2\alpha^2) + \ZZ4\alpha^2.
@@ -1329,9 +1348,12 @@ Of these only the second has an obvious ring generator, so we work with this get
 For discriminant $-11^3$ we get a similar result, some curves but the discriminants of their minimal models are wrong.
 However when we try $-11^5$ we obtain a curve whose minimal integral model is
 \[
-E\colon y^2 + y = x^3 - x^2 - 10*x - 20
+E\colon y^2 + y = x^3 - x^2 - 10x - 20
 \]
 which has discriminant $-11^5$, as required.
+
+It is worth noting here that problems of this type do arise naturally when attempting to find the elliptic curve associated to a given modular form.
+The details of this however are beyond the scope of this project.
 \end{ex}
 
 \chapter{Conclusion}
@@ -1344,7 +1366,7 @@ But we have also seen how the less general methods can be used to improve this a
 There are still many cases that appear to be very slow however.
 For example when the index is a large prime power none of the techniques we have given here can be applied to speed the computation up.
 
-%TODO be positive?
+Nevertheless the problem has been a very interesting one to consider and the fact that it is trickier than we originally thought has only made it more satisfying to make some progress on.
 
 \section{Further work}
 It seems likely that other properties of the orders we are looking for could be used to speed up the algorithms given above and so further investigations into both special and general cases could yield results.
@@ -1364,18 +1386,10 @@ The natural extension to relative number fields given as problem~\ref{prob:rel} 
 Finally of course there may be some methods for finding orders completely different to those considered here!
 
 \section{Acknowledgements}
-First and foremost I would like to thank Lassina Demb\'el\'e for his excellent guidance while I undertook the project, it was truly a pleasure to work with him.
+First and foremost I would like to thank Lassina Demb\'el\'e for his excellent guidance while I undertook the project.
+It was truly a pleasure to work with him and I look forward to seeing if we can make further progress.
+
 I am also grateful to John Cremona for allowing me access to one of the Warwick number theory group's servers to run computations on.
-
-%\chapter{Appendix: Code}
-
-%Much of what was done has been implemented in both the Sage and Magma and so we provide annotated source code listings for the algorithms in both languages below.
- 
-%\section{Sage}
-%\lstinputlisting[language=Python]{../sage/order_of_index.py}
-
-%\section{Magma}
-%\lstinputlisting[language=Pascal]{../magma/orderofindex.m}
 
 \nocite{*}
 \bibliographystyle{alpha}
